# ffmpeg-cmake

./: .gitignore  CMakeLists.txt  config.h.in
libavcodec/: CMakeLists.txt
