set(AVCODEC_SRC
    012v.c
    4xm.c
    8bps.c
    8svx.c
    a64multienc.c
    aac_ac3_parser.c
    aacadtsdec.c
    aac_adtstoasc_bsf.c
    aaccoder.c
    aacdec.c
    aacdec_fixed.c
    aacdec_template.c
    aacenc.c
    aacenc_is.c
    aacenc_ltp.c
    aacenc_pred.c
    aacenctab.c
    aacenc_tns.c
    aac_parser.c
    aacps.c
    aacpsdata.c
    aacpsdsp_fixed.c
    aacpsdsp_float.c
    aacpsdsp_template.c
    aacps_fixed.c
    aacps_fixed_tablegen.c
    aacps_float.c
    aacps_tablegen.c
    aacps_tablegen_template.c
    aacpsy.c
    aacsbr.c
    aacsbr_fixed.c
    aacsbr_template.c
    aactab.c
    aandcttab.c
    aasc.c
    ac3.c
    ac3dec.c
    ac3dec_data.c
    ac3dec_fixed.c
    ac3dec_float.c
    ac3dsp.c
    ac3enc.c
    ac3enc_fixed.c
    ac3enc_float.c
    ac3enc_opts_template.c
    ac3enc_template.c
    ac3_parser.c
    ac3tab.c
    acelp_filters.c
    acelp_pitch_delay.c
    acelp_vectors.c
    adpcm.c
    adpcm_data.c
    adpcmenc.c
    adx.c
    adxdec.c
    adxenc.c
    adx_parser.c
    aic.c
    alac.c
    alac_data.c
    alacdsp.c
    alacenc.c
    aliaspixdec.c
    aliaspixenc.c
    allcodecs.c
    alsdec.c
    amrnbdec.c
    amrwbdec.c
    anm.c
    ansi.c
    apedec.c
    ass.c
    assdec.c
    assenc.c
    ass_split.c
    asv.c
    asvdec.c
    asvenc.c
    atrac1.c
    atrac3.c
    atrac3plus.c
    atrac3plusdec.c
    atrac3plusdsp.c
    atrac.c
    audioconvert.c
    audiodsp.c
    audio_frame_queue.c
    audiotoolboxdec.c
    audiotoolboxenc.c
    aura.c
    avdct.c
    avfft.c
    avpacket.c
    avpicture.c
    avrndec.c
    avs.c
    avuidec.c
    avuienc.c
    bethsoftvideo.c
    bfi.c
    bgmc.c
    binkaudio.c
    bink.c
    binkdsp.c
    bintext.c
    bit_depth_template.c
    bitstream.c
    bitstream_filter.c
    bitstream_filters.c
    blockdsp.c
    bmp.c
    bmpenc.c
    bmp_parser.c
    bmvaudio.c
    bmvvideo.c
    brenderpix.c
    bsf.c
    bswapdsp.c
    c93.c
    cabac.c
    canopus.c
    cavs.c
    cavsdata.c
    cavsdec.c
    cavsdsp.c
    cavs_parser.c
    cbrt_data.c
    cbrt_data_fixed.c
    cbrt_fixed_tablegen.c
    cbrt_tablegen.c
    cbrt_tablegen_template.c
    ccaption_dec.c
    cdgraphics.c
    cdxl.c
    celp_filters.c
    celp_math.c
    cfhd.c
    cfhddata.c
    cga_data.c
    chomp_bsf.c
    cinepak.c
    cinepakenc.c
    cljrdec.c
    cljrenc.c
    cllc.c
    cngdec.c
    cngenc.c
    codec_desc.c
    cook.c
    cook_parser.c
    cos_tablegen.c
    cpia.c
    crystalhd.c
    cscd.c
    cuvid.c
    cyuv.c
    d3d11va.c
    dca.c
    dca_core_bsf.c
    dca_core.c
    dcadata.c
    dcadct.c
    dcadec.c
    dcadsp.c
    dcaenc.c
    dca_exss.c
    dcahuff.c
    dca_lbr.c
    dca_parser.c
    dca_xll.c
    dct32_fixed.c
    dct32_float.c
    dct32_template.c
    dct.c
    dctref.c
    dds.c
    dfa.c
    dirac_arith.c
    dirac.c
    diracdec.c
    diracdsp.c
    dirac_dwt.c
    dirac_dwt_template.c
    dirac_parser.c
    diractab.c
    dnxhddata.c
    dnxhddec.c
    dnxhdenc.c
    dnxhd_parser.c
    dpcm.c
    dpx.c
    dpxenc.c
    dpx_parser.c
    dsd.c
    dsddec.c
    dsicinaudio.c
    dsicinvideo.c
    dss_sp.c
    dstdec.c
    dump_extradata_bsf.c
    dvaudiodec.c
    dvaudio_parser.c
    dvbsub.c
    dvbsubdec.c
    dvbsub_parser.c
    dv.c
    dvdata.c
    dvdec.c
    dvd_nav_parser.c
    dvdsubdec.c
    dvdsubenc.c
    dvdsub_parser.c
    dvenc.c
    dv_profile.c
    dv_tablegen.c
    dxa.c
    dxtory.c
    dxva2.c
    dxva2_h264.c
    dxva2_hevc.c
    dxva2_mpeg2.c
    dxva2_vc1.c
    dxva2_vp9.c
    dxv.c
    eac3_data.c
    eac3dec.c
    eac3enc.c
    eacmv.c
    eaidct.c
    eamad.c
    eatgq.c
    eatgv.c
    eatqi.c
    elbg.c
    elsdec.c
    error_resilience.c
    escape124.c
    escape130.c
    evrcdec.c
    exif.c
    exr.c
    faandct.c
    faanidct.c
    faxcompr.c
    fdctdsp.c
    ffjni.c
    fft_fixed_32.c
    fft_fixed.c
    fft_float.c
    fft_init_table.c
    fft_template.c
    ffv1.c
    ffv1dec.c
    ffv1enc.c
    ffwavesynth.c
    fic.c
    file_open.c
    flac.c
    flacdata.c
    flacdec.c
    flacdsp.c
    flacdsp_lpc_template.c
    flacdsp_template.c
    flacenc.c
    flac_parser.c
    flashsv2enc.c
    flashsv.c
    flashsvenc.c
    flicvideo.c
    flvdec.c
    flvenc.c
    fmtconvert.c
    frame_thread_encoder.c
    fraps.c
    frwu.c
    g2meet.c
    g722.c
    g722dec.c
    g722dsp.c
    g722enc.c
    g723_1.c
    g723_1dec.c
    g723_1enc.c
    g726.c
    g729dec.c
    g729_parser.c
    g729postfilter.c
    gif.c
    gifdec.c
    golomb.c
    gsmdec.c
    gsmdec_data.c
    gsmdec_template.c
    gsm_parser.c
    h261.c
    h261data.c
    h261dec.c
    h261enc.c
    h261_parser.c
    h263.c
    h263data.c
    h263dec.c
    h263dsp.c
    h263_parser.c
    h2645_parse.c
    h264addpx_template.c
    h264.c
    h264_cabac.c
    h264_cavlc.c
    h264chroma.c
    h264chroma_template.c
    h264data.c
    h264_direct.c
    h264dsp.c
    h264dsp_template.c
    h264idct.c
    h264idct_template.c
    h264_loopfilter.c
    h264_mb.c
    h264_mb_template.c
    h264_mc_template.c
    h264_mp4toannexb_bsf.c
    h264_parse.c
    h264_parser.c
    h264_picture.c
    h264pred.c
    h264pred_template.c
    h264_ps.c
    h264qpel.c
    h264qpel_template.c
    h264_refs.c
    h264_sei.c
    h264_slice.c
    hap.c
    hapdec.c
    hapenc.c
    hevc.c
    hevc_cabac.c
    hevc_data.c
    hevcdsp.c
    hevcdsp_template.c
    hevc_filter.c
    hevc_mp4toannexb_bsf.c
    hevc_mvs.c
    hevc_parser.c
    hevcpred.c
    hevcpred_template.c
    hevc_ps.c
    hevc_ps_enc.c
    hevc_refs.c
    hevc_sei.c
    hnm4video.c
    hpeldsp.c
    hpel_template.c
    hq_hqa.c
    hq_hqadata.c
    hq_hqadsp.c
    hqx.c
    hqxdsp.c
    hqxvlc.c
    htmlsubtitles.c
    huffman.c
    huffyuv.c
    huffyuvdec.c
    huffyuvdsp.c
    huffyuvenc.c
    huffyuvencdsp.c
    idcinvideo.c
    idctdsp.c
    iff.c
    iirfilter.c
    imc.c
    imdct15.c
    imgconvert.c
    imx_dump_header_bsf.c
    indeo2.c
    indeo3.c
    indeo4.c
    indeo5.c
    intelh263dec.c
    interplayacm.c
    interplayvideo.c
    intrax8.c
    intrax8dsp.c
    ituh263dec.c
    ituh263enc.c
    ivi.c
    ivi_dsp.c
    j2kenc.c
    jacosubdec.c
    jfdctfst.c
    jfdctint.c
    jfdctint_template.c
    jni.c
    jpeg2000.c
    jpeg2000dec.c
    jpeg2000dsp.c
    jpeg2000dwt.c
    jpegls.c
    jpeglsdec.c
    jpeglsenc.c
    jpegtables.c
    jrevdct.c
    jvdec.c
    kbdwin.c
    kgv1dec.c
    kmvc.c
    lagarith.c
    lagarithrac.c
    latm_parser.c
    lcldec.c
    lclenc.c
    libcelt_dec.c
    libfaac.c
    libfdk-aacdec.c
    libfdk-aacenc.c
    libgsmdec.c
    libgsmenc.c
    libilbc.c
    libkvazaar.c
    libmp3lame.c
    libopencore-amr.c
    libopenh264enc.c
    libopenjpegdec.c
    libopenjpegenc.c
    libopus.c
    libopusdec.c
    libopusenc.c
    libschroedinger.c
    libschroedingerdec.c
    libschroedingerenc.c
    libshine.c
    libspeexdec.c
    libspeexenc.c
    libtheoraenc.c
    libtwolame.c
    libvo-amrwbenc.c
    libvorbisdec.c
    libvorbisenc.c
    libvpx.c
    libvpxdec.c
    libvpxenc.c
    libwavpackenc.c
    libwebpenc_animencoder.c
    libwebpenc.c
    libwebpenc_common.c
    libx264.c
    libx265.c
    libxavs.c
    libxvid.c
    libxvid_rc.c
    libzvbi-teletextdec.c
    ljpegenc.c
    loco.c
    log2_tab.c
    lossless_audiodsp.c
    lossless_videodsp.c
    lpc.c
    lsp.c
    lzf.c
    lzw.c
    lzwenc.c
    m101.c
    mace.c
    magicyuv.c
    mathtables.c
    mdct_fixed_32.c
    mdct_fixed.c
    mdct_float.c
    mdct_template.c
    mdec.c
    me_cmp.c
    mediacodecdec.c
    mediacodecdec_h264.c
    mediacodec_sw_buffer.c
    mediacodec_wrapper.c
    metasound.c
    metasound_data.c
    microdvddec.c
    mimic.c
    mjpeg2jpeg_bsf.c
    mjpega_dump_header_bsf.c
    mjpegbdec.c
    mjpegdec.c
    mjpegenc.c
    mjpegenc_common.c
    mjpeg_parser.c
    mlp.c
    mlpdec.c
    mlpdsp.c
    mlp_parser.c
    mmaldec.c
    mmvideo.c
    motion_est.c
    motion_est_template.c
    motionpixels.c
    motionpixels_tablegen.c
    movsub_bsf.c
    movtextdec.c
    movtextenc.c
    mp3_header_decompress_bsf.c
    mpc7.c
    mpc8.c
    mpc.c
    mpeg12.c
    mpeg12data.c
    mpeg12dec.c
    mpeg12enc.c
    mpeg4audio.c
    mpeg4_unpack_bframes_bsf.c
    mpeg4video.c
    mpeg4videodec.c
    mpeg4videoenc.c
    mpeg4video_parser.c
    mpegaudio.c
    mpegaudiodata.c
    mpegaudiodec_fixed.c
    mpegaudiodec_float.c
    mpegaudiodecheader.c
    mpegaudiodec_template.c
    mpegaudiodsp.c
    mpegaudiodsp_data.c
    mpegaudiodsp_fixed.c
    mpegaudiodsp_float.c
    mpegaudiodsp_template.c
    mpegaudioenc_fixed.c
    mpegaudioenc_float.c
    mpegaudioenc_template.c
    mpegaudio_parser.c
    mpegaudio_tablegen.c
    mpeg_er.c
    mpegpicture.c
    mpegutils.c
    mpegvideo.c
    mpegvideodata.c
    mpegvideodsp.c
    mpegvideo_enc.c
    mpegvideoencdsp.c
    mpegvideo_motion.c
    mpegvideo_parser.c
    mpegvideo_xvmc.c
    mpl2dec.c
    mqc.c
    mqcdec.c
    mqcenc.c
    msgsmdec.c
    msmpeg4.c
    msmpeg4data.c
    msmpeg4dec.c
    msmpeg4enc.c
    msrle.c
    msrledec.c
    mss12.c
    mss1.c
    mss2.c
    mss2dsp.c
    mss34dsp.c
    mss3.c
    mss4.c
    msvideo1.c
    msvideo1enc.c
    mvcdec.c
    mxpegdec.c
    nellymoser.c
    nellymoserdec.c
    nellymoserenc.c
    noise_bsf.c
    nuv.c
    nvenc.c
    nvenc_h264.c
    nvenc_hevc.c
    omx.c
    on2avc.c
    on2avcdata.c
    options.c
    opus.c
    opus_celt.c
    opusdec.c
    opus_parser.c
    opus_silk.c
    pafaudio.c
    pafvideo.c
    pamenc.c
    parser.c
    pcm-bluray.c
    pcm.c
    pcm-dvd.c
    pcm_tablegen.c
    pcx.c
    pcxenc.c
    pel_template.c
    pgssubdec.c
    pictordec.c
    pixblockdsp.c
    png.c
    pngdec.c
    pngdsp.c
    pngenc.c
    png_parser.c
    pnm.c
    pnmdec.c
    pnmenc.c
    pnm_parser.c
    profiles.c
    proresdata.c
    proresdec2.c
    proresdec_lgpl.c
    proresdsp.c
    proresenc_anatoliy.c
    proresenc_kostya.c
    psymodel.c
    pthread.c
    pthread_frame.c
    pthread_slice.c
    ptx.c
    qcelpdec.c
    qdm2.c
    qdm2_tablegen.c
    qdrw.c
    qpeg.c
    qpeldsp.c
    qpel_template.c
    qsv_api.c
    qsv.c
    qsvdec.c
    qsvdec_h2645.c
    qsvdec_mpeg2.c
    qsvdec_vc1.c
    qsvenc.c
    qsvenc_h264.c
    qsvenc_hevc.c
    qsvenc_mpeg2.c
    qtrle.c
    qtrleenc.c
    r210dec.c
    r210enc.c
    ra144.c
    ra144dec.c
    ra144enc.c
    ra288.c
    ralf.c
    rangecoder.c
    ratecontrol.c
    raw.c
    rawdec.c
    rawenc.c
    rdft.c
    realtextdec.c
    remove_extradata_bsf.c
    resample2.c
    resample.c
    reverse.c
    rl2.c
    rl.c
    rle.c
    roqaudioenc.c
    roqvideo.c
    roqvideodec.c
    roqvideoenc.c
    rpza.c
    rscc.c
    rtjpeg.c
    rv10.c
    rv10enc.c
    rv20enc.c
    rv30.c
    rv30dsp.c
    rv34.c
    rv34dsp.c
    rv34_parser.c
    rv40.c
    rv40dsp.c
    s302m.c
    s302menc.c
    samidec.c
    sanm.c
    sbrdsp.c
    sbrdsp_fixed.c
    sbrdsp_template.c
    screenpresso.c
    sgidec.c
    sgienc.c
    sgirledec.c
    sheervideo.c
    shorten.c
    simple_idct.c
    simple_idct_template.c
    sinewin.c
    sinewin_fixed.c
    sinewin_fixed_tablegen.c
    sinewin_tablegen.c
    sinewin_tablegen_template.c
    sipr16k.c
    sipr.c
    smacker.c
    smc.c
    smvjpegdec.c
    snappy.c
    snow.c
    snowdec.c
    snow_dwt.c
    snowenc.c
    sonic.c
    sp5xdec.c
    srtdec.c
    srtenc.c
    startcode.c
    subviewerdec.c
    sunrast.c
    sunrastenc.c
    svq13.c
    svq1.c
    svq1dec.c
    svq1enc.c
    svq3.c
    synth_filter.c
    tak.c
    takdec.c
    takdsp.c
    tak_parser.c
    targa.c
    targaenc.c
    targa_y216dec.c
    tdsc.c
    textdec.c
    texturedsp.c
    texturedspenc.c
    tiertexseqv.c
    tiff.c
    tiff_common.c
    tiff_data.c
    tiffenc.c
    tmv.c
    tpeldsp.c
    truemotion1.c
    truemotion2.c
    truemotion2rt.c
    truespeech.c
    tscc2.c
    tscc.c
    tta.c
    ttadata.c
    ttadsp.c
    ttaenc.c
    twinvq.c
    twinvqdec.c
    txd.c
    ulti.c
    utils.c
    utvideo.c
    utvideodec.c
    utvideoenc.c
    v210dec.c
    v210enc.c
    v210x.c
    v308dec.c
    v308enc.c
    v408dec.c
    v408enc.c
    v410dec.c
    v410enc.c
    vaapi.c
    vaapi_encode.c
    vaapi_encode_h264.c
    vaapi_encode_h265.c
    vaapi_encode_h26x.c
    vaapi_encode_mjpeg.c
    vaapi_h264.c
    vaapi_hevc.c
    vaapi_mpeg2.c
    vaapi_mpeg4.c
    vaapi_vc1.c
    vaapi_vp9.c
    vb.c
    vble.c
    vc1_block.c
    vc1.c
    vc1data.c
    vc1dec.c
    vc1dsp.c
    vc1_loopfilter.c
    vc1_mc.c
    vc1_parser.c
    vc1_pred.c
    vc2enc.c
    vc2enc_dwt.c
    vcr1.c
    vda.c
    vda_h264.c
    vda_h264_dec.c
    vdpau.c
    vdpau_h264.c
    vdpau_hevc.c
    vdpau_mpeg12.c
    vdpau_mpeg4.c
    vdpau_vc1.c
    videodsp.c
    videodsp_template.c
    videotoolbox.c
    videotoolboxenc.c
    vima.c
    vmdaudio.c
    vmdvideo.c
    vmnc.c
    vorbis.c
    vorbis_data.c
    vorbisdec.c
    vorbisdsp.c
    vorbisenc.c
    vorbis_parser.c
    vp3.c
    vp3dsp.c
    vp3_parser.c
    vp56.c
    vp56data.c
    vp56dsp.c
    vp56rac.c
    vp5.c
    vp6.c
    vp6dsp.c
    vp8.c
    vp8dsp.c
    vp8_parser.c
    vp9.c
    vp9dsp_10bpp.c
    vp9dsp_12bpp.c
    vp9dsp_8bpp.c
    vp9dsp.c
    vp9dsp_template.c
    vp9_mc_template.c
    vp9_parser.c
    vp9_superframe_bsf.c
    vqavideo.c
    wavpack.c
    wavpackenc.c
    webp.c
    webvttdec.c
    webvttenc.c
    wma.c
    wma_common.c
    wmadec.c
    wmaenc.c
    wma_freqs.c
    wmalosslessdec.c
    wmaprodec.c
    wmavoice.c
    wmv2.c
    wmv2data.c
    wmv2dec.c
    wmv2dsp.c
    wmv2enc.c
    wnv1.c
    wrapped_avframe.c
    ws-snd1.c
    xan.c
    xbmdec.c
    xbmenc.c
    xface.c
    xfacedec.c
    xfaceenc.c
    xiph.c
    xl.c
    xsubdec.c
    xsubenc.c
    xvididct.c
    xwddec.c
    xwdenc.c
    xxan.c
    y41pdec.c
    y41penc.c
    ylc.c
    yop.c
    yuv4dec.c
    yuv4enc.c
    zerocodec.c
    zmbv.c
    zmbvenc.c
)

add_library(avcodec SHARED ${AVCODEC_SRC})
